@@ -4,7 +4,7 @@ Summary: Identified hadron spectra in pp at 200 GeV
 Experiment: STAR
 Collider: RHIC pp 200 GeV
 SpiresID: 6500200
-Status: UNVALIDATED
+Status: VALIDATED
 Authors:
  - Bedanga Mohanty <bedanga@rcf.bnl.gov>
  - Hendrik Hoeth <hendrik.hoeth@cern.ch>
